fixed board header z-index

--- a/frontend/src/assets/styles/cmps/_board-header.scss
+++ b/frontend/src/assets/styles/cmps/_board-header.scss
@@ -2,7 +2,7 @@
 	position: sticky;
 	top: 0;
 	background-color: $clr0;
-	z-index: 1;
+	z-index: 3;
 	padding: 16px 30px 0px 38px;
 
 	.board-header-top {
